add the patch endpoint fot partial updating and the test cases of it
